force-app/main/default/objects/Invoice__c/fields/Canceled_with__c.field-meta.xml
<CustomField>
    <fullName>Canceled_with__c</fullName>
    <description>The invoice no. of the invoice that was created to cancel this invoice.</description>
    <label>Canceled with</label>
    <length>20</length>
    <type>Text</type>
</CustomField>