force-app/main/default/objects/Invoice__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>The class/ category of the invoice object: invoice or credit.</description>
    <label>Class</label>
    <length>20</length>
    <type>Text</type>
</CustomField>