force-app/main/default/objects/Invoice__c/fields/Credit_for__c.field-meta.xml
<CustomField>
    <fullName>Credit_for__c</fullName>
    <description>The invoice no. that was canceled with this invoice.</description>
    <label>Credit for</label>
    <length>20</length>
    <type>Text</type>
</CustomField>