force-app/main/default/objects/Invoice__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>The invoice date that is printed on the invoice.</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>