force-app/main/default/objects/Invoice__c/fields/Email_Error__c.field-meta.xml
<CustomField>
    <fullName>Email_Error__c</fullName>
    <label>Email Error</label>
    <length>200</length>
    <type>Text</type>
</CustomField>