force-app/main/default/objects/Invoice__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <description>The total invoice amount of an invoice or credit.</description>
    <inlineHelpText>Amount that the partner needs to transfer or will receive (if the sum is negative)</inlineHelpText>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>