force-app/main/default/objects/Invoice__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The invoice number of the invoice in the billing org. (previously called &quot;No&quot; in old org)</description>
    <externalId>true</externalId>
    <label>Invoice Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>