force-app/main/default/objects/Invoice__c/fields/Last_Remote_Upsert__c.field-meta.xml
<CustomField>
    <fullName>Last_Remote_Upsert__c</fullName>
    <description>Helper Field: Shows the date/ time of the last remote upsert event for this object.</description>
    <label>Last Remote Upsert</label>
    <type>DateTime</type>
</CustomField>