force-app/main/default/objects/Invoice__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>The link to the externally available PDF document of the invoice.</description>
    <label>External PDF</label>
    <type>Url</type>
</CustomField>