force-app/main/default/objects/Invoice__c/fields/Online_paid__c.field-meta.xml
<CustomField>
    <fullName>Online_paid__c</fullName>
    <description>Sums up the all invoice line item totals where the product group contains &apos;PAYMENT&apos;.</description>
    <inlineHelpText>Amount that users transferred via online payment</inlineHelpText>
    <label>Sum Online paid orders</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>