force-app/main/default/objects/Invoice__c/fields/Online_Payment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Online_Payment_Fee__c</fullName>
    <description>Sums up the all invoice line item totals where the product group is &apos;PAYFEE&apos;.. was called SumPaymentFee__c in the old org</description>
    <inlineHelpText>Sum of the fee for all online paid orders</inlineHelpText>
    <label>Online Payment Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>