force-app/main/default/objects/Invoice__c/fields/Partial_Payment__c.field-meta.xml
<CustomField>
    <fullName>Partial_Payment__c</fullName>
    <description>Remaining amount that is open under an invoice</description>
    <label>Partial Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>