force-app/main/default/objects/Invoice__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>The date when the invoice was paid.</description>
    <inlineHelpText>The date when the invoice was paid.</inlineHelpText>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>