force-app/main/default/objects/Invoice__c/fields/PDF__c.field-meta.xml
<CustomField>
    <fullName>PDF__c</fullName>
    <label>PDF</label>
    <type>Url</type>
</CustomField>