force-app/main/default/objects/Invoice__c/fields/SAP_PDF_Url__c.field-meta.xml
<CustomField>
    <fullName>SAP_PDF_Url__c</fullName>
    <formula>HYPERLINK(&apos;/apex/ViewInvoicePdf?id=&apos; &amp; Id, &apos;Link&apos;, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP PDF Url</label>
    <type>Text</type>
</CustomField>