force-app/main/default/objects/Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The current status of the invoice.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Collected</fullName>
            </value>
            <value>
                <fullName>Overpayment</fullName>
            </value>
            <value>
                <fullName>Partially Collected</fullName>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>