force-app/main/default/objects/Invoice__c/fields/Subscription_Fee__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Fee__c</fullName>
    <description>Sums up the all invoice line item totals where the product group contains &apos;BASEFEE&apos;. The value can be exported with the csv invoice export in a separate column. (was called &quot;SumBaseFees__c&quot; in the Old)</description>
    <inlineHelpText>Shows the amount of the subscription fee</inlineHelpText>
    <label>Subscription Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>