force-app/main/default/objects/Invoice__c/fields/SumCommission__c.field-meta.xml
<CustomField>
    <fullName>SumCommission__c</fullName>
    <description>Sums up all invoice line item totals where the product group contains &apos;COM&apos;. The value can be exported with the csv invoice export in a separate column.</description>
    <inlineHelpText>Shows order commission paid by the partner for this invoice</inlineHelpText>
    <label>Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>