force-app/main/default/objects/Invoice__c/fields/SumCoupons__c.field-meta.xml
<CustomField>
    <fullName>SumCoupons__c</fullName>
    <description>Sums up the all invoice line item totals where the product group is &apos;COUPON&apos;. The value can be exported with the csv invoice export in a separate column</description>
    <inlineHelpText>Amount of all vouchers user redeemed with that restaurant</inlineHelpText>
    <label>Coupons/Vouchers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>