force-app/main/default/objects/Invoice__c/fields/SumOrdersNet__c.field-meta.xml
<CustomField>
    <fullName>SumOrdersNet__c</fullName>
    <description>The total net number of orders of an invoice (orders minus cancelations).</description>
    <inlineHelpText>The total net number of orders of billed in that invoice (orders minus cancelations).</inlineHelpText>
    <label>Order Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>