force-app/main/default/objects/Invoice__c/fields/Total_Net__c.field-meta.xml
<CustomField>
    <fullName>Total_Net__c</fullName>
    <description>The subtotal net amount of the invoice.</description>
    <inlineHelpText>Amount before taxes</inlineHelpText>
    <label>Total Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>