force-app/main/default/objects/Invoice__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of an invoice, e.g. cancelation.</description>
    <inlineHelpText>The type of an invoice, e.g. cancelation.</inlineHelpText>
    <label>Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>